Add exprType
